* Rename fuse.env.test() key `STRING_METHODS_WRONGLY_SETS_REGEXP_LAST_INDEX` to `STRING_METHODS_WRONGLY_SET_REGEXP_LAST_INDEX`. [jddalton]

* Rename fuse.env.Bug/Feature to fuse.env.test and add fuse.env.addTest and fuse.env.removeTest methods. [FuseJS LH #44] [jddalton, Joe Gornick, kangax]

* Lowercase the Fuse namespaces and remove the List aliases. [jddalton]

* Add the overlooked reverse(), sort(), and splice() methods to the Fuseboxed Array.prototype. [jddalton]

* Make Fuseboxed constructor's prototype values of the OBJECT__PROTO__ branch conform to ECMA specifications. [jddalton]

* Add sandboxed Boolean constructor to Fusebox. [jddalton]

* Add a lot of comments to Fuse.Fusebox() and cleanup its codebase. [jddalton]

* Break Fuse.Object.prototype's relationship to other sandboxed natives for consistency across sandbox variations. [jddalton]

* Remove extraneous document.domain setter in the ACTIVE_X_OBJECT branch of createSandbox(). [jddalton]

* Simplify accessing the created iframe in createSandbox(). [jddalton]

* Simplify the RegExp wrapper for broken `\s` in createFusebox(). [jddalton]

* Remove `delete this[expando]` from Ajax.Updater, Ajax.TimedUpdater, Range, Template, and Timer classes to avoid issues when `this` is the global object in IE. [jddalton]

* Move the Element#scrollTo method to the position.js. [jddalton]

* Add `selected` to the list of flag attributes in attribute.js. [Diego Perini, jddalton]

* Make Event.extend() work on events originating from a secondary document. [jddalton]

* Convert unit tests with the `!=` selector to `:not()`. [jddalton]

* Update NWMatcher adapter to work with v1.2.1 [jddalton]

* Make Fuse.Dom.Node() not error with textNodes. [jddalton]

* Remove extraneous check from Fuse.Object.isSameOrigin(). [jddalton]

* Fix regression bugs with Element#contains and Element#getViewportOffset that prevented unit tests from passing. [jddalton]
